Java 9: Class.newInstance() is deprecated.